# wsse-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: wsse.hpp
src/: wsse.cpp
